# CodroidSDK

./: .gitignore  404.html  build_all.sh  build_msvc.bat  build_so.sh  index.html  objects.inv
api/: index.html
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  control_test  globalVal_test  ik_fk_test  io_test  jog_test  moveTo_test  move_test  register_test  sub_test
build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_docs.sh
cpp/examples/: globalVal_test.cpp  jog_test.cpp  move_test.cpp  sub_test.cpp
cpp/include/Codroid/: CodroidControlInterface.h  CodroidDefine.h  CodroidExport.h  CodroidSubscriber.h
cpp/src/: CodroidControlInterface.cpp  CodroidSubscriber.cpp
examples/: control_test.cpp  globalVal_test.cpp  ik_fk_test.cpp  io_test.cpp  moveTo_test.cpp  register_test.cpp  sub_test.cpp
include/Codroid/: CodroidControlInterface.h  CodroidDefine.h  CodroidSubscriber.h
model/: index.html
python/: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
python/examples/: 01_basic_usage.py  02_run_script.py  03_run_project.py  04_global_value.py  05_rs485.py  06_jog_mode.py  07_move_to.py  08_move.py  09_move_path.py  10_control_commands.py  11_io_demo.py  12_register_demo.py  13_cri_realtime.py
python/src/codroid/: CodroidControlInterface.py  __about__.py  __init__.py  cri.py  exceptions.py  models.py  network.py  utils.py
python/tests/: __init__.py
src/: CodroidControlInterface.cpp
stylesheets/: extra.css
